--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-    <title>EdukaS1</title>
+    <title>Elearning</title>
     <link rel="stylesheet" href="style/Bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="style/Bootstrap/js/bootstrap.bundle.min.js">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.9/fullpage.min.css"
@@ -16,7 +16,7 @@
 
 <body>
     <nav id="web-navbar" class="navbar navbar-expand-lg navbar-dark fixed-top py-2">
-        <a class="navbar-brand" href="index.html"><img src="style/img/logo.png" alt=""></a>
+        <a class="navbar-brand" href="index.html"><h3>Elearning</h3></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -48,7 +48,7 @@
             <div class="header-container">
                 <div class="header-content">
                     <h3>Welcome To</h3>
-                    <h1>EdukaS1</h1>
+                    <h1>Elearning</h1>
                     <p>Learn and Teach for
                         Bachelor Degree Online
                     </p>
