--- a/course.html
+++ b/course.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-    <title>EdukaS1</title>
+    <title>Elearning</title>
     <link rel="stylesheet" href="style/Bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="style/Bootstrap/js/bootstrap.bundle.min.js">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.9/fullpage.min.css"
@@ -17,7 +17,7 @@
 <body>
 
     <nav id="web-navbar" class="nav-course navbar navbar-expand-lg navbar-dark fixed-top py-2">
-        <a class="navbar-brand" href="index.html"><img src="style/img/logo.png" alt=""></a>
+        <a class="navbar-brand" href="index.html"><h3>Elearning</h3></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -53,14 +53,14 @@
     </div>
 
     <section class="main-container">
-        <h1>Pilih Fakultas</h1>
+        <h1>Chọn khóa học</h1>
 
         <div class="row">
             <div class="col-lg-3 col-md-6">
                 <button type="button" data-toggle="modal" data-target="#ModalEkonomika">
                     <div class="course ekonomika">
                         <div class="course-container">
-                            <p>Fakultas Ekonomika dan Bisnis</p>
+                            <p>Kinh tế và kinh doanh</p>
                         </div>
                     </div>
                 </button>
@@ -97,7 +97,7 @@
                 <button type="button" data-toggle="modal" data-target="#ModalHukum">
                     <div class="course hukum">
                         <div class="course-container">
-                            <p>Fakultas Hukum</p>
+                            <p>Luật</p>
                         </div>
                     </div>
                 </button>
@@ -131,7 +131,7 @@
                 <button type="button" data-toggle="modal" data-target="#ModalIlmuBudaya">
                     <div class="course budaya">
                         <div class="course-container">
-                            <p>Fakultas Ilmu Budaya</p>
+                            <p>Văn học</p>
                         </div>
                     </div>
                 </button>
@@ -171,7 +171,7 @@
                 <button type="button" data-toggle="modal" data-target="#ModalIlmuSospol">
                     <div class="course sosial">
                         <div class="course-container">
-                            <p>Fakultas Ilmu Sosial dan Ilmu Politik</p>
+                            <p>Khoa học xã hội và khoa học chính trị</p>
                         </div>
                     </div>
                 </button>
@@ -211,7 +211,7 @@
                 <button type="button" data-toggle="modal" data-target="#ModalKedokteran">
                     <div class="course dokter">
                         <div class="course-container">
-                            <p>Fakultas Kedokteran</p>
+                            <p>Y học</p>
                         </div>
                     </div>
                 </button>
@@ -249,7 +249,7 @@
                 <button type="button" data-toggle="modal" data-target="#ModalKesmas">
                     <div class="course kesmas">
                         <div class="course-container">
-                            <p>Fakultas Kesehatan Masyarakat</p>
+                            <p>Khoa Y Tế</p>
                         </div>
                     </div>
                 </button>
@@ -283,7 +283,7 @@
                 <button type="button" data-toggle="modal" data-target="#ModalPerikanan">
                     <div class="course ikan">
                         <div class="course-container">
-                            <p>Fakultas Perikanan dan Ilmu Kelautan</p>
+                            <p>Thủy sản</p>
                         </div>
                     </div>
                 </button>
@@ -322,7 +322,7 @@
                 <button type="button" data-toggle="modal" data-target="#ModalPeternakan">
                     <div class="course ternak">
                         <div class="course-container">
-                            <p>Fakultas Peternakan dan Pertanian</p>
+                            <p>Nông nghiệp</p>
                         </div>
                     </div>
                 </button>
@@ -361,7 +361,7 @@
                 <button type="button" data-toggle="modal" data-target="#ModalPsikologi">
                     <div class="course psikologi">
                         <div class="course-container">
-                            <p>Fakultas Psikologi</p>
+                            <p>Tâm Lý Học</p>
                         </div>
                     </div>
                 </button>
@@ -395,7 +395,7 @@
                 <button type="button" data-toggle="modal" data-target="#ModalSains">
                     <div class="course sains">
                         <div class="course-container">
-                            <p>Fakultas Sains dan Matematika</p>
+                            <p>Toán Học</p>
                         </div>
                     </div>
                 </button>
@@ -435,7 +435,7 @@
                 <button type="button" data-toggle="modal" data-target="#ModalTeknik">
                     <div class="course teknik">
                         <div class="course-container">
-                            <p>Fakultas Teknik</p>
+                            <p>Kỹ Thuật</p>
                         </div>
                     </div>
                 </button>
@@ -479,13 +479,13 @@
 
     <footer id="footer">
         <div class="icon">
-            <a target="_blank" href="mailto: edukas1.startup@gmail.com">
+            <a target="_blank" href="mailto: Elearning.startup@gmail.com">
                 <span class="fa-stack fa-lg">
                     <i class="fas fa-circle fa-stack-2x"></i>
                     <i class="fas fa-envelope fa-stack-1x white"></i>
                 </span>
             </a>
-            <a target="_blank" href="https://www.instagram.com/edukas1/">
+            <a target="_blank" href="https://www.instagram.com/Elearning/">
                 <span class="fa-stack fa-lg">
                     <i class="fas fa-circle fa-stack-2x"></i>
                     <i class="fab fa-instagram fa-stack-1x white"></i>
@@ -498,7 +498,7 @@
                 </span>
             </a>
         </div>
-        <p>EdukaS1 &copy; 2020. All rights reserved.</p>
+        <p>Elearning &copy; 2020. All rights reserved.</p>
     </footer>
 
 
