--- a/Course/Ekonomi/Manajemen/Materi.html
+++ b/Course/Ekonomi/Manajemen/Materi.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-	<title>EdukaS1</title>
+	<title>Elearning</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -135,22 +135,22 @@
 						  	</div>
 						  	<a href="video/deskrip.html" style="text-decoration: none;">	
 						  	<div class="grid panjang">
-							  	<h2 class="k1">Judul</h2>
-							  	<p>Deskripsi Singkat Tentang Judul</p>
+							  	<h2 class="k1">Khóa học</h2>
+							  	<p>Mô tả ngắn về khóa học</p>
 
 							  	<div class="k-icon">
 									<i class="fas fa-user-alt"></i>
 								</div>
-								<p class="k2">Tavan Daihaqi</p>
+								<p class="k2">Kế toán</p>
 
 								<div class="k-icon">
 								  <i class="fas fa-clock beda"></i>
 								</div>
-								<p class="k2">180 Menit</p>
+								<p class="k2">180 phút</p>
 						  	</div></a>
 						  	<div class="grid">
-						  		<h5>Rp25.000.-</h5>
-						  		<h6>Rp20.000.-</h6>
+						  		<h5>500.000đ</h5>
+						  		<h6>400.000đ</h6>
 						  		<div class="rating">
 									<input type="radio" name="star" id="star1"><label for="star1"></label>
 									<input type="radio" name="star" id="star2"><label for="star2"></label>
@@ -167,23 +167,23 @@
 						  	</div>
 						  	<a href="video/deskrip.html" style="text-decoration: none;">	
 						  	<div class="grid panjang">
-							  	<a href="video-1/deskrip.html" class="k1">Judul</a>
-							  	<p>Deskripsi Singkat Tentang Judul</p>
+							  	<a href="video/deskrip.html" class="k1">Khóa học</a>
+							  	<p>Mô tả ngắn về khóa học</p>
 
 							  	<div class="k-icon">
 									<i class="fas fa-user-alt"></i>
 								</div>
-								<p class="k2">Tavan Daihaqi</p>
+								<p class="k2">Kế toán</p>
 
 								<div class="k-icon">
 								  <i class="fas fa-clock beda"></i>
 								</div>
-								<p class="k2">180 Menit</p>
+								<p class="k2">180 phút</p>
 						  	</div>
 						  </a>
 						  	<div class="grid">
-						  		<h5>Rp25.000.-</h5>
-						  		<h6>Rp20.000.-</h6>
+						  		<h5>500.000đ</h5>
+						  		<h6>400.000đ</h6>
 						  		<div class="rating">
 									<input type="radio" name="star" id="star1"><label for="star1"></label>
 									<input type="radio" name="star" id="star2"><label for="star2"></label>
@@ -200,23 +200,23 @@
 						  	</div>
 						  	<a href="video/deskrip.html" style="text-decoration: none;">	
 						  	<div class="grid panjang">
-							  	<a href="video-2/deskrip.html" class="k1">Judul</a>
-							  	<p>Deskripsi Singkat Tentang Judul</p>
+							  	<a href="video/deskrip.htmll" class="k1">Khóa học</a>
+							  	<p>Mô tả ngắn về khóa học</p>
 
 							  	<div class="k-icon">
 									<i class="fas fa-user-alt"></i>
 								</div>
-								<p class="k2">Tavan Daihaqi</p>
+								<p class="k2">Kế toán</p>
 
 								<div class="k-icon">
 							  	<i class="fas fa-clock"></i>
 								</div>
-								<p class="k2">180 Menit</p>
+								<p class="k2">180 phút</p>
 						  	</div>
 						  </a>
 						  	<div class="grid">
-						  		<h5>Rp25.000.-</h5>
-						  		<h6>Rp20.000.-</h6>
+						  		<h5>500.000đ</h5>
+						  		<h6>400.000đ</h6>
 						  		<div class="rating">
 									<input type="radio" name="star" id="star1"><label for="star1"></label>
 									<input type="radio" name="star" id="star2"><label for="star2"></label>
@@ -232,23 +232,23 @@
 						  	</div>
 						  	<a href="video/deskrip.html" style="text-decoration: none;">	
 						  	<div class="grid panjang">
-							  	<a href="video-3/deskrip.html" class="k1">Judul</a>
-							  	<p> Deskripsi Singkat Tentang Judul</p>
+							  	<a href="video/deskrip.html" class="k1">Khóa học</a>
+							  	<p> Mô tả ngắn về khóa học</p>
 
 							  	<div class="k-icon">
 									<i class="fas fa-user-alt"></i>
 								</div>
-								<p class="k2">Tavan Daihaqi</p>
+								<p class="k2">Kế toán</p>
 
 								<div class="k-icon">
 							  	<i class="fas fa-clock"></i>
 								</div>
-								<p class="k2">180 Menit</p>
+								<p class="k2">180 phút</p>
 						  	</div>
 						  </a>
 						  	<div class="grid">
-						  		<h5>Rp25.000.-</h5>
-						  		<h6>Rp20.000.-</h6>
+						  		<h5>500.000đ</h5>
+						  		<h6>400.000đ</h6>
 						  		<div class="rating">
 									<input type="radio" name="star" id="star1"><label for="star1"></label>
 									<input type="radio" name="star" id="star2"><label for="star2"></label>
@@ -265,23 +265,23 @@
 						  	</div>
 						  	<a href="video/deskrip.html" style="text-decoration: none;">	
 						  	<div class="grid panjang">
-							  	<a href="video-4/deskrip.html" class="k1">Judul</a>
-							  	<p>Deskripsi Singkat Tentang Judul</p>
+							  	<a href="video/deskrip.html" class="k1">Khóa học</a>
+							  	<p>Mô tả ngắn về khóa học</p>
 
 							  	<div class="k-icon">
 									<i class="fas fa-user-alt"></i>
 								</div>
-								<p class="k2">Tavan Daihaqi</p>
+								<p class="k2">Kế toán</p>
 
 								<div class="k-icon">
 							  	<i class="fas fa-clock"></i>
 								</div>
-								<p class="k2">180 Menit</p>
+								<p class="k2">180 phút</p>
 						  	</div>
 						  </a>
 						  	<div class="grid">
-						  		<h5>Rp25.000.-</h5>
-						  		<h6>Rp20.000.-</h6>
+						  		<h5>500.000đ</h5>
+						  		<h6>400.000đ</h6>
 						  		<div class="rating">
 									<input type="radio" name="star" id="star1"><label for="star1"></label>
 									<input type="radio" name="star" id="star2"><label for="star2"></label>
