--- a/login.html
+++ b/login.html
@@ -18,12 +18,12 @@
 
     <link rel="stylesheet" type="text/css" href="style/login.css">
 
-    <title>EdukaS1-Login</title>
+    <title>Elearning-Login</title>
 </head>
 
 <body>
     <nav id="web-navbar" class="nav-course navbar navbar-expand-lg navbar-dark fixed-top py-2">
-        <a class="navbar-brand" href="index.html"><img src="style/img/logo.png" alt=""></a>
+        <a class="navbar-brand" href="index.html"><h2>Elearning</h2></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -53,8 +53,6 @@
     <main class="login-pg">
         <div class="gambar">
             <div class="gambar-e">
-                <img src="style/img/logop.png" alt="Langit" class="pic log">
-                <p>Platform digital yang menyediakan tempat dosen/tutor untuk memberikan video pembelajaran yang bersifat edukatif dan tempat belajar bagi mahasiswa untuk setiap mata kuliah yang ada pada setiap jurusan di Indonesia.</p>
             </div>
         </div>
 
