--- a/signup.html
+++ b/signup.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>EdukaS1-SignUp</title>
+    <title>Elearning Sign up</title>
 
     <link rel="stylesheet" type="text/css" href="skins.css">
     <!--script nav-->
@@ -23,7 +23,7 @@
 
 <body>
     <nav id="web-navbar" class="nav-course navbar navbar-expand-lg navbar-dark fixed-top py-2">
-        <a class="navbar-brand" href="index.html"><img src="style/img/logo.png" alt=""></a>
+        <a class="navbar-brand" href="index.html">Elearning</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -52,7 +52,6 @@
     <main>
         <div class="form">
             <h1>Sign Up</h1>
-            <h4>Tutor's EdukaS1</h4>
             <form>
                 <div class="form-group">
                     <label for="inputAddress">Username</label>
@@ -68,7 +67,7 @@
                         <input type="password" class="form-control" id="inputPassword4">
                     </div>
                     <div class="form-group col-md-6">
-                        <label for="inputPassword4">Ulangi Password</label>
+                        <label for="inputPassword4">Re-Enter Password</label>
                         <input type="password" class="form-control" id="inputPassword4">
                     </div>
                 </div>
@@ -83,9 +82,9 @@
                     </div>
                 </div>
                 <a href="index.html">
-                    <button type="submit" class="btn btn-primary">Sign in</button>
+                    <button type="submit" class="btn btn-primary">Sign up</button>
                 </a>
-                <a class="dropdown-item" href="login.html">Sudah Memiliki Akun?</a>
+                <a class="dropdown-item" href="login.html">Already Have an Account?</a>
             </form>
         </div>
     </main>
